--- a/AsteroidRadar/starter/app/build.gradle
+++ b/AsteroidRadar/starter/app/build.gradle
@@ -64,8 +64,10 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
+    implementation "androidx.room:room-common:2.3.0"
 
     implementation "android.arch.work:work-runtime-ktx:1.0.1"
 
