--- a/AsteroidRadar/starter/build.gradle
+++ b/AsteroidRadar/starter/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.3'
@@ -22,7 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
     }
 }
 
