--- a/AsteroidRadar/starter/app/build.gradle
+++ b/AsteroidRadar/starter/app/build.gradle
@@ -107,7 +107,7 @@ dependencies {
 //    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
 //    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
 //    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
-//    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
 //    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1"
 //    implementation "androidx.recyclerview:recyclerview:1.1.0"
    implementation 'com.squareup.picasso:picasso:2.5.2'
